# tbl

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/tabl/: Cargo.toml
crates/tabl-cli/: Cargo.toml  build.rs
crates/tabl-cli/src/: main.rs  output.rs  python.rs  styles.rs  summary.rs  transform.rs  types.rs
crates/tabl-cli/src/cli/: args.rs  mod.rs  parsing.rs
crates/tabl-cli/src/cli/subcommands/: cat.rs  count.rs  data.rs  df.rs  drop.rs  insert.rs  lf.rs  ls.rs  merge.rs  mod.rs  pl.rs  schema.rs  schemas.rs  stats.rs
crates/tabl-core/: Cargo.toml
crates/tabl-core/src/: formats.rs  types.rs
crates/tabl-core/src/filesystem/: manipulate.rs  mod.rs  outputs.rs  sizes.rs
crates/tabl-core/src/parquet/: mod.rs  parquet_cast.rs  parquet_drop.rs  parquet_scan.rs  parquet_summary.rs
crates/tabl/src/: filesystem.rs  formats.rs  lib.rs  parquet.rs  types.rs
crates/tabl/src/parquet/: mod.rs  parquet_cast.rs  parquet_drop.rs  parquet_merge.rs
crates/tbl/: Cargo.toml
crates/tbl-cli/: Cargo.toml  build.rs
crates/tbl-cli/src/: main.rs  output.rs  python.rs  styles.rs  summary.rs  transform.rs  types.rs
crates/tbl-cli/src/cli/: args.rs  args_old.rs
crates/tbl-cli/src/cli/subcommands/: cast.rs  count.rs  data.rs  df.rs  drop.rs  head.rs  insert.rs  lf.rs  ls.rs  merge.rs  migrate.rs  mod.rs  partition.rs  pl.rs  schema.rs  schemas.rs  tail.rs
crates/tbl-core/: Cargo.toml
crates/tbl-core/src/: types.rs
crates/tbl-core/src/filesystem/: manipulate.rs  outputs.rs
crates/tbl-core/src/parquet/: parquet_cast.rs  parquet_drop.rs  parquet_merge.rs  parquet_scan.rs  parquet_summary.rs
crates/tbl/src/: formats.rs  types.rs
crates/tbl/src/filesystem/: gather.rs  inputs.rs  manipulate.rs  mod.rs  outputs.rs  sizes.rs
crates/tbl/src/parquet/: mod.rs  parquet_cast.rs  parquet_insert.rs  parquet_summary.rs
