
[workspace]
members = ["crates/tabl", "crates/tabl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/tabl"
repository = "https://github.com/paradigmxyz/tabl"
exclude = [".github/"]

[workspace.dependencies]
thiserror = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
