[package]
name = "tabl-cli"
description = "tabl is a tool for reading and editing tabular data files"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "tabl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tabl-core = { version = "0.1.0", path = "../tabl-core" }
term_size = "0.3.2"
polars = { workspace = true }
toolstr = "0.1.5"
toolstr_colored = "2.1.1"
inquire = "0.7.5"
anstyle = "1.0.7"
color-print = "0.3.6"
chrono = "0.4.38"
hex = "0.4.3"

[build-dependencies]
built = "0.7"
