[package]
name = "tabl"
description = "utilities for reading and modifying tabular files"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arrow = { workspace = true }
futures = "0.3.30"
hex = "0.4.3"
parquet = { version = "52.0.0", features = ["async"] }
polars = { version = "0.40.0", features = ["lazy", "parquet"] }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"
