[package]
name = "tbl-cli"
description = "tbl is a tool for reading and editing tabular data files"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "tbl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tbl = { version = "0.1.0", path = "../tbl" }
term_size = "0.3.2"
toolstr = "0.1.5"
polars = "0.40.0"
toolstr_colored = "2.1.1"
inquire = "0.7.5"
anstyle = "1.0.7"
color-print = "0.3.6"
